Bug 95074 - libinput incorrectly normalizes tablet distance values
Summary: libinput incorrectly normalizes tablet distance values
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-22 22:31 UTC by Jason Gerecke
Modified: 2016-04-29 00:58 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jason Gerecke 2016-04-22 22:31:28 UTC
Commit 25a9f39 ("tablet: fix the airbrush slider range") has caused libinput to start normalizing distance values to the range [-1, 1] instead of the expected [0, 1]. This can be easily seen by bringing a tool into prox while running libinput-debug-events:

event16	TABLET_TOOL_PROXIMITY  +2.85s		91.11*/91.11*	distance: 0.30*	rotation: 0.00*	wheel: 15.00* (1)	mouse (0xa00, id 0x17) proximity-in	axes:drw	btn:LMRSdEx
event16	TABLET_TOOL_AXIS  +2.87s		91.21*/91.21*	distance: 0.30	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.87s		91.28*/91.28*	distance: 0.30	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.88s		91.34*/91.34*	distance: 0.21*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.89s		91.34/91.34*	distance: 0.21	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.90s		91.46*/91.46*	distance: 0.21	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.91s		91.46/91.46*	distance: 0.11*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.92s		91.58*/91.58*	distance: 0.11	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.93s		91.64*/91.64*	distance: 0.02*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.94s		91.75*/91.75*	distance: 0.02	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.95s		91.83*/91.83*	distance: 0.02	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.96s		91.92*/91.92*	distance: -0.08*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.97s		91.92/91.92*	distance: -0.08	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.98s		91.92/91.92*	distance: -0.17*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +2.99s		91.84*/91.84*	distance: -0.17	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.00s		91.74*/91.74*	distance: -0.17	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.01s		91.60*/91.60*	distance: -0.30*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.03s		91.57*/91.57	distance: -0.30	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.04s		91.57/91.57*	distance: -0.30	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.05s		91.57/91.57	distance: -0.40*	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.06s		91.57/91.57*	distance: -0.40	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.07s		91.62*/91.62	distance: -0.40	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.11s		91.66*/91.66	distance: -0.40	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.15s		91.74*/91.74	distance: -0.40	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.15s		91.74/91.74*	distance: -0.40	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.17s		91.74/91.74*	distance: -0.40	rotation: 0.00	wheel: 0.00 (0)
event16	TABLET_TOOL_AXIS  +3.19s		91.85*/91.85	distance: -0.49*	rotation: 0.00	wheel: 0.00 (0)
Comment 2 Peter Hutterer 2016-04-29 00:58:28 UTC
commit 4552d686f8559cd3f688d0af0bd98eb4e5bc23a8
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Tue Apr 26 10:55:37 2016 +1000

    tablet: fix distance normalization range after 25a9f39


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.