test/tablet.c
@@ -3106,6 +3106,39 @@ static void pressure_threshold_warning(struct libinput *libinput,
 		(*warning_triggered)++;
 }
 
+START_TEST(tablet_pressure_range)
+{
+	struct litest_device *dev = litest_current_device();
+	struct libinput *li = dev->libinput;
+	struct libinput_event *event;
+	struct libinput_event_tablet_tool *tev;
+	struct axis_replacement axes[] = {
+		{ ABS_DISTANCE, 0 },
+		{ ABS_PRESSURE, 10 },
+		{ -1, -1 },
+	};
+	int pressure;
+	double p;
+
+	litest_tablet_proximity_in(dev, 5, 100, axes);
+	litest_drain_events(li);
+	libinput_dispatch(li);
+
+	for (pressure = 1; pressure <= 100; pressure += 10) {
+		litest_axis_set_value(axes, ABS_PRESSURE, pressure);
+		litest_tablet_motion(dev, 70, 70, axes);
+		libinput_dispatch(li);
+
+		event = libinput_get_event(li);
+		tev = litest_is_tablet_event(event, LIBINPUT_EVENT_TABLET_TOOL_AXIS);
+		p = libinput_event_tablet_tool_get_pressure(tev);
+		ck_assert_double_ge(p, 0.0);
+		ck_assert_double_le(p, 1.0);
+		libinput_event_destroy(event);
+	}
+}
+END_TEST
+
 START_TEST(tablet_pressure_offset_exceed_threshold)
 {
 	struct litest_device *dev = litest_current_device();
@@ -3209,6 +3242,39 @@ START_TEST(tablet_pressure_offset_none_for_small_distance)
 	ck_assert_double_gt(pressure, 0.0);
 
 	libinput_event_destroy(event);
+}
+END_TEST
+
+START_TEST(tablet_distance_range)
+{
+	struct litest_device *dev = litest_current_device();
+	struct libinput *li = dev->libinput;
+	struct libinput_event *event;
+	struct libinput_event_tablet_tool *tev;
+	struct axis_replacement axes[] = {
+		{ ABS_DISTANCE, 20 },
+		{ ABS_PRESSURE, 0 },
+		{ -1, -1 },
+	};
+	int distance;
+	double dist;
+
+	litest_tablet_proximity_in(dev, 5, 100, axes);
+	litest_drain_events(li);
+	libinput_dispatch(li);
+
+	for (distance = 0; distance <= 100; distance += 10) {
+		litest_axis_set_value(axes, ABS_DISTANCE, distance);
+		litest_tablet_motion(dev, 70, 70, axes);
+		libinput_dispatch(li);
+
+		event = libinput_get_event(li);
+		tev = litest_is_tablet_event(event, LIBINPUT_EVENT_TABLET_TOOL_AXIS);
+		dist = libinput_event_tablet_tool_get_distance(tev);
+		ck_assert_double_ge(dist, 0.0);
+		ck_assert_double_le(dist, 1.0);
+		libinput_event_destroy(event);
+	}
 }
 END_TEST
 
@@ -3672,12 +3738,14 @@ litest_setup_tests(void)
 	litest_add("tablet:calibration", tablet_calibration_set_matrix, LITEST_TABLET, LITEST_ANY);
 	litest_add("tablet:calibration", tablet_calibration_set_matrix_delta, LITEST_TABLET, LITEST_ANY);
 
+	litest_add_for_device("tablet:pressure", tablet_pressure_range, LITEST_WACOM_INTUOS);
 	litest_add_for_device("tablet:pressure", tablet_pressure_offset, LITEST_WACOM_INTUOS);
 	litest_add_for_device("tablet:pressure", tablet_pressure_offset_decrease, LITEST_WACOM_INTUOS);
 	litest_add_for_device("tablet:pressure", tablet_pressure_offset_increase, LITEST_WACOM_INTUOS);
 	litest_add_for_device("tablet:pressure", tablet_pressure_offset_exceed_threshold, LITEST_WACOM_INTUOS);
 	litest_add_for_device("tablet:pressure", tablet_pressure_offset_none_for_zero_distance, LITEST_WACOM_INTUOS);
 	litest_add_for_device("tablet:pressure", tablet_pressure_offset_none_for_small_distance, LITEST_WACOM_INTUOS);
+	litest_add_for_device("tablet:distance", tablet_distance_range, LITEST_WACOM_INTUOS);
 
 	litest_add("tablet:relative", relative_no_profile, LITEST_TABLET, LITEST_ANY);
 	litest_add("tablet:relative", relative_no_delta_prox_in, LITEST_TABLET, LITEST_ANY);
